# starpressure

./: .gitignore  Cargo.toml  data.json  workflow.md
assets/starpressure/: .template.json  broken.json  frame.json  frame_bg.json  frame_parts.json  lamp.json  no_png.json  pipe.json  pipe_big.json  pipe_variants.json  pipe_variants_water.json  pipe_water.json  plant.json  stars.json  tank.json
src/: appstates.rs  components.rs  consts.rs  main.rs  networking_test.rs  systems.rs  test.rs  tilemap_test.rs  world_inspector.rs  yaromain.rs
src/constructor/: components.rs  interactions.rs  mod.rs  systems.rs  ui.rs
src/core/: default.rs  mod.rs
src/core/tiles/: mod.rs
src/core/tiles/tiled_editor/: mod.rs  plugin.rs  tile_picker.rs
src/core/tiles/tilemap/: mod.rs  parser.rs  tile_grid.rs  tiles.rs
src/editor/: atlas.rs  components.rs  interactions.rs  mod.rs  systems.rs  ui.rs
src/game_core/: components.rs  game.rs  game_core.rs  mod.rs  objects.rs  tilemap.rs
src/networking/: channels.rs  client.rs  mod.rs  networking.rs  packets.rs  server.rs
src/ragdoll/: components.rs  mod.rs  systems.rs
src/sectors/: mod.rs  systems.rs
src/ship/: components.rs  mod.rs  rooms.rs  systems.rs
src/ship/backtiles/: mod.rs  systems.rs
src/ship/constructor/: components.rs  systems.rs
src/ship/tiles/: components.rs  systems.rs
src/showcases/: tilegrid_editor.rs
