[package]
name = "starpressure"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.bevy_rapier2d]
opt-level = 1

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking", "bevy_dynamic_plugin", "multi-threaded", "serialize"]}
bevy_rapier2d = { version = "0.25.0", features = [ "debug-render-2d", "parallel", "enhanced-determinism" ] }
bevy_egui = "0.25.0"
bevy-inspector-egui = "0.23.2"
bevy_file_dialog = "=0.4.0"

# random
rand = "0.8.5"
rand_chacha = "0.3.1"
# networking
bevy_renet = { version = "0.0.11" }
renet_visualizer = { version = "0.0.8", features = ["bevy"] }

#serde_json = "1.0.114"
serde = "1.0.193"
bincode = "1.3.3"
weighted_rand = "0.4.2"

# GPU particles
#bevy_hanabi = "0.8"

[[bin]]
name = "yaromain"
path = "src/yaromain.rs"

[[bin]]
name = "net"
path = "src/networking_test.rs"

#[[bin]]
#name = "client_net"
#path = "src/networking/networking_test.rs"
#
#[[bin]]
#name = "server_net"
#path = "src/networking/networking_test.rs"