[package]
name = "starpressure"
version = "0.1.0-dev"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.bevy_rapier2d]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking", "bevy_dynamic_plugin", "multi-threaded", "serialize"]}
bevy_rapier2d = { version = "0.26.0", features = [ "debug-render-2d", "parallel", "serde-serialize", "simd-stable" ] } # "enhanced-determinism" vs "smid-stable"
bevy-inspector-egui = "0.24.0"
# random
rand = "0.8.5"
rand_chacha = "0.3.1"
# networking
lightyear = "0.15.1"

serde = "1.0.193"
bincode = "1.3.3"
weighted_rand = "0.4.2"
tokio = "1.36.0"
serde_json = "1.0.120"

# GPU particles
#bevy_hanabi = "0.8"

[[bin]]
name = "tilegrid_editor"
path = "src/showcases/tilegrid_editor.rs"
